add .grid and .grid-item

--- a/index.html
+++ b/index.html
@@ -61,26 +61,26 @@
       <section class="advantage">
         <div class="container">
           <h2 class="section-title invisible">Преимущества</h2>
-          <ul class="list adv">
-            <li class="item">
+          <ul class="list adv grid">
+            <li class="item grid-item">
               <h3 class="title">Внимание к деталям</h3>
               <p class="text">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
-            <li class="item">
+            <li class="item grid-item">
               <h3 class="title">Пунктуальность</h3>
               <p class="text">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
-            <li class="item">
+            <li class="item grid-item">
               <h3 class="title">Планирование</h3>
               <p class="text">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
-            <li class="item">
+            <li class="item grid-item">
               <h3 class="title">Современные технологии</h3>
               <p class="text">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -93,10 +93,10 @@
       <section class="works">
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
-          <ul class="list work">
-            <li><img src="./images/work/img1.jpg" alt="Web development" width="370" /></li>
-            <li><img src="./images/work/img2.jpg" alt="Mobile applications" width="370" /></li>
-            <li><img src="./images/work/img3.jpg" alt="Design" width="370" /></li>
+          <ul class="list work grid">
+            <li class="grid-item"><img src="./images/work/img1.jpg" alt="Web development" width="370" /></li>
+            <li class="grid-item"><img src="./images/work/img2.jpg" alt="Mobile applications" width="370" /></li>
+            <li class="grid-item"><img src="./images/work/img3.jpg" alt="Design" width="370" /></li>
           </ul>
         </div>
       </section>
@@ -104,29 +104,29 @@
       <section class="comand">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
-          <ul class="list ccards">
-            <li class="ccard">
+          <ul class="list ccards grid">
+            <li class="ccard grid-item">
               <img src="./images/comand/img1.jpg" alt="photo by Igor Demyanenko" width="270" />
               <div class="person">
                 <h3 class="name">Игорь Демьяненко</h3>
                 <p class="prof" lang="en">Product Designer</p>
               </div>
             </li>
-            <li class="ccard">
+            <li class="ccard grid-item">
               <img src="./images/comand/img2.jpg" alt="photo by Olga Repina" width="270" />
               <div class="person">
                 <h3 class="name">Ольга Репина</h3>
                 <p class="prof" lang="en">Frontend Developer</p>
               </div>
             </li>
-            <li class="ccard">
+            <li class="ccard grid-item">
               <img src="./images/comand/img3.jpg" alt="photo by Nikolai Tarasov" width="270" />
               <div class="person">
                 <h3 class="name">Николай Тарасов</h3>
                 <p class="prof" lang="en">Marketing</p>
               </div>
             </li>
-            <li class="ccard">
+            <li class="ccard grid-item">
               <img src="./images/comand/img4.jpg" alt="photo by Mikhail Ermakov" width="270" />
               <div class="person">
                 <h3 class="name">Михаил Ермаков</h3>
