--- a/portfolio.html
+++ b/portfolio.html
@@ -60,8 +60,8 @@
             <li class="item"><button class="btn" type="button">Маркетинг</button></li>
           </ul>
           <!-- Картки вибіркового перегляду  -->
-          <ul class="list cards">
-            <li class="item">
+          <ul class="list cards grid">
+            <li class="item grid-item">
               <a class="card" href="">
                 <img src="./images/portfolio/img1.jpg" width="370" alt="Технокряк" />
                 <div class="text-bloc">
@@ -70,7 +70,7 @@
                 </div>
               </a>
             </li>
-            <li class="item">
+            <li class="item grid-item">
               <a class="card" href="">
                 <img
                   src="./images/portfolio/img2.jpg"
@@ -83,7 +83,7 @@
                 </div>
               </a>
             </li>
-            <li class="item">
+            <li class="item grid-item">
               <a class="card" href="">
                 <img src="./images/portfolio/img3.jpg" width="370" alt="Ресторан Seafood" />
                 <div class="text-bloc">
@@ -92,7 +92,7 @@
                 </div>
               </a>
             </li>
-            <li class="item">
+            <li class="item grid-item">
               <a class="card" href="">
                 <img src="./images/portfolio/img4.jpg" width="370" alt="Проект Prime" />
                 <div class="text-bloc">
@@ -101,7 +101,7 @@
                 </div>
               </a>
             </li>
-            <li class="item">
+            <li class="item grid-item">
               <a class="card" href="">
                 <img src="./images/portfolio/img5.jpg" width="370" alt="Проект Boxes" />
                 <div class="text-bloc">
@@ -110,7 +110,7 @@
                 </div>
               </a>
             </li>
-            <li class="item">
+            <li class="item grid-item">
               <a class="card" href="">
                 <img
                   src="./images/portfolio/img6.jpg"
@@ -123,7 +123,7 @@
                 </div>
               </a>
             </li>
-            <li class="item">
+            <li class="item grid-item">
               <a class="card" href="">
                 <img src="./images/portfolio/img7.jpg" width="370" alt="Издание Limited Edition" />
                 <div class="text-bloc">
@@ -132,7 +132,7 @@
                 </div>
               </a>
             </li>
-            <li class="item">
+            <li class="item grid-item">
               <a class="card" href="">
                 <img src="./images/portfolio/img8.jpg" width="370" alt="Проект LAB" />
                 <div class="text-bloc">
@@ -141,7 +141,7 @@
                 </div>
               </a>
             </li>
-            <li class="item">
+            <li class="item grid-item">
               <a class="card" href="">
                 <img src="./images/portfolio/img9.jpg" width="370" alt="Growing Business" />
                 <div class="text-bloc">
