--- a/portfolio.html
+++ b/portfolio.html
@@ -39,10 +39,20 @@
         </nav>
         <ul class="list contacts-list">
           <li class="contacts-item">
-            <a class="contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="contacts" href="mailto:info@devstudio.com">
+              <svg class="contacts-icon" width="16px" height="12px">
+                <use href="./images/sprite.svg#icon-envelope "></use>
+              </svg>
+              info@devstudio.com</a
+            >
           </li>
           <li class="contacts-item">
-            <a class="contacts" href="tel:380961111111">+38 096 111 11 11</a>
+            <a class="contacts" href="tel:380961111111">
+              <svg class="contacts-icon" width="10px" height="16px">
+                <use href="./images/sprite.svg#icon-smartphone "></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -156,24 +166,85 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a class="logo" href="./index.html">Web<span class="logo-white">Studio</span> </a>
-        <address class="address" id="contacts">
-          <ul class="list ads">
+        <div class="address-container">
+          <a class="logo" href="./index.html">Web<span class="logo-white">Studio</span> </a>
+          <address class="address" id="contacts">
+            <ul class="list ads">
+              <li class="item">
+                <a
+                  class="map"
+                  href="//goo.gl/maps/XvVAJL7zwZZcy64VA"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="item">
+                <a class="mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              </li>
+              <li class="item">
+                <a class="tel" href="tel:380961111111">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="call">
+          <h3 class="call-title">Присоединяйтесь</h3>
+          <ul class="list">
             <li class="item">
               <a
-                class="map"
-                href="//goo.gl/maps/XvVAJL7zwZZcy64VA"
+                class="call-link"
+                href=""
                 target="_blank"
                 rel="noopener noreferrer"
-                >г. Киев, пр-т Леси Украинки, 26</a
+                aria-label="Instagram"
               >
+                <svg class="call-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
             <li class="item">
-              <a class="mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              <a
+                class="call-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="twitter"
+              >
+                <svg class="call-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="item"><a class="tel" href="tel:380961111111">+38 096 111 11 11</a></li>
+            <li class="item">
+              <a
+                class="call-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="facebook"
+              >
+                <svg class="call-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a
+                class="call-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="linkedin"
+              >
+                <svg class="call-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
